--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,6 +49,10 @@ nav {
   justify-content: center;
   margin: auto;
 }
-/* #petcard {
-  margin-left: 40px;
-} */
+
+#petcard {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
